# rs-fm-index

./: BENCHMARK.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md
benches/: paged_reader.rs  wavelet_build.rs
docs/: USAGE.md
src/: api.rs  lib.rs  main.rs  shard_router.rs
src/cache/: mod.rs  sharded_fifo.rs
src/index/: bitpack.rs  builder.rs  encoding.rs  external_sa.rs  header.rs  mod.rs  query.rs  sa_backend.rs  sampled_sa.rs  scratch.rs  wavelet.rs
src/ingest/: config.rs  mod.rs  orchestrator.rs
src/iolib/: mod.rs  paged_reader.rs
src/tests/: api_tests.rs  external_sa_tests.rs  mod.rs  pipeline.rs  query_tests.rs
