[package]
name = "rust-fm-index"
version = "0.0.1"
edition = "2024"

[dependencies]
cdivsufsort = "2.0.0"                               # Fast C-based Suffix Array construction
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
rayon = "1.8"
anyhow = "1.0"                                      # For error handling
twox-hash = "2.1.2"
tempfile = "3.25.0"
byteorder = "1.0"

[dev-dependencies]
rand = "0.10.0"
